data/derived/comb/progs/unify/prog2570.ml.out
Characters 46-49:
  let f a x = fun a -> fun a -> x(x) in
                                 ^^^
Error: This expression has type 'a -> 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b
